Added DeviceMigrationController
- Added endpoints to DeviceMigrationController
