# users/src/main/java/com/paranoiax/users/infrastructure/rest/api/devices/v1/MigrationStatusResponse.java
@@ -4,8 +4,8 @@ import tools.jackson.databind.PropertyNamingStrategies;
 import tools.jackson.databind.annotation.JsonNaming;
 
 @JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
-public record CreateUploadUrlResponse(
-        String blobId,
-        String uploadUrl
+public record MigrationStatusResponse(
+        String status,
+        String challenge
 ) {
 }
